feat(roiNb): Add table/plot toggle and template for inputs

--- a/notebooks/roi/economicReturns.qmd
+++ b/notebooks/roi/economicReturns.qmd
@@ -22,6 +22,12 @@ import {
 } from "/helpers/uiComponents.ojs";
 
 import { atlasTOC } from "/helpers/toc.ojs";
+import { formatUSD, inputTemplate } from "/helpers/std.ojs";
+
+import {
+  filterableDataTable as atlasTable,
+  sparkbar,
+} from "/components/atlasTable.ojs";
 ```
 
 ```{ojs}
@@ -67,16 +73,43 @@ md`${_lang(nbText.overview.blocks.block4)}`;
 
 ```{ojs}
 htl.html`
-<div style="display: flex; gap: 3em;">
+<div style="display: flex; gap: 3em; margin-bottom: 1.5em;">
     ${viewof select_country}
     ${viewof select_region}
     ${viewof select_crop}
   </div>
 `
+
+viewof productionView = Inputs.radio(["plot", "table"], {
+  value: "table",
+  label: "Producition Data Preview",
+})
 ```
 
 ```{ojs}
 {
+  if (productionView == "table") {
+    const maxVal = d3.max(exposure_data, d => d.value);
+    return atlasTable(exposure_data, {
+      columns: ["admin0_name", "admin1_name", "crop", "value"],
+      header: {value: "USD", crop: "Crop", admin0_name: "Country", admin1_name: "Region"},
+      sort: "value",
+      reverse: true,
+      format: {
+        value: sparkbar({
+          max: maxVal,
+          align: "right",
+          background: "#D9ECD9",
+          color: "black"
+        })
+      }
+    });
+  } else {
+    return renderProductionBars()
+  }
+}
+
+renderProductionBars = () => {
   const data = exposure_data
     .filter((d) =>
     regionSet.has(`${d.iso3}_${d.admin1_name}`),
@@ -101,12 +134,11 @@ htl.html`
   return Plot.plot({
     subtitle: _title,
     marginLeft: 50,
-    width: 928,
+    width,
     height: 500,
     x: { label: null, tickFormat: (d) => `${d} Regions` },
     y: { tickFormat:(d) => formatUSD()(d) },
     color: {
-      scheme: "Spectral",
       legend: true,
       label: "Crops",
     },
@@ -152,10 +184,7 @@ viewof inputProjectOptions = {
       years:inputProjectYears
     },
     {
-      template: (inputs) =>
-        htl.html`<div style="display: flex; gap: 3em">${Object.values(
-          inputs
-        )}</div>`
+      template: inputTemplate({ gap: "3em" }),
     }
   );
 }
@@ -248,10 +277,7 @@ viewof selections_econPerfWalkthrough = {
       inputCisImpact
 },
     {
-      template: (inputs) =>
-        htl.html`<div style="display: flex; gap: 3em">${Object.values(
-          inputs
-        )}</div>`,
+      template: inputTemplate({ gap: "3em" }),
     }
   )
 }
