feat(roiNB): Updates to the notebook text and translations

--- a/notebooks/roi/economicReturns.qmd
+++ b/notebooks/roi/economicReturns.qmd
@@ -7,10 +7,6 @@ date-created: "2025-10-15"
 date-edited: today
 execute:
   echo: false
-# format:
-#   html:
-#     code-fold: true
-#     code-summary: "Show the code" ## Add this to global template to make debugging easier.
 ---
 
 ```{ojs}
@@ -82,17 +78,21 @@ htl.html`
 
 viewof productionView = Inputs.radio(["plot", "table"], {
   value: "table",
-  label: "Producition Data Preview",
+  label: _lang(general_translations.vizType.title),
+  format: (d) => _lang(general_translations.vizType?.[d]),
 })
 ```
 
 ```{ojs}
 {
   if (productionView == "table") {
+    const a0_clean = _lang(general_translations.country);
+    const a1_clean = _lang(general_translations.region);
+    const commodity_clean = _lang(general_translations.commodity);
     const maxVal = d3.max(exposure_data, d => d.value);
     return atlasTable(exposure_data, {
       columns: ["admin0_name", "admin1_name", "crop", "value"],
-      header: {value: "USD", crop: "Crop", admin0_name: "Country", admin1_name: "Region"},
+      header: {value: "USD", crop: commodity_clean, admin0_name: a0_clean, admin1_name: a1_clean},
       sort: "value",
       reverse: true,
       format: {
@@ -136,11 +136,11 @@ renderProductionBars = () => {
     marginLeft: 50,
     width,
     height: 500,
-    x: { label: null, tickFormat: (d) => `${d} Regions` },
+    x: { label: null, tickFormat: (d) => `${d}` },
     y: { tickFormat:(d) => formatUSD()(d) },
     color: {
       legend: true,
-      label: "Crops",
+      label: _lang({en: "Commodity", fr: "Culture"}),
     },
     marks: [
       Plot.barY(flatTotals, {
@@ -205,13 +205,6 @@ viewof inputProjectOptions = {
 ## `{ojs} _lang(nbText.projectSetup.blocks.impacts.h2)`
 
 `{ojs} _lang(nbText.projectSetup.blocks.impacts.text)`
-
-## Select Parameters
-
-<!-- This is not correct in the notebook as this section
-is on production impact, adapotion rate, etc. -->
-
-Choose your model parameters for the analysis.
 
 ```{ojs}
 viewof selections_econPerfWalkthrough = {
@@ -296,16 +289,35 @@ options_econPerfWalkthrough = {
 
 ```{ojs}
 {
+  const advancedControlsText = nbText.projectSetup.blocks.costs.advancedControls;
+
+  const _benefitLowLabel = makeTooltipLabel({
+    labelText: _lang(advancedControlsText.inputs.benefitScaleLow.label),
+    tooltipText: _lang(advancedControlsText.inputs.benefitScaleLow.tooltip),
+  });
+  const _benefitHighLabel = makeTooltipLabel({
+    labelText: _lang(advancedControlsText.inputs.benefitScaleHigh.label),
+    tooltipText: _lang(advancedControlsText.inputs.benefitScaleHigh.tooltip),
+  });
+  const _costLowLabel = makeTooltipLabel({
+    labelText: _lang(advancedControlsText.inputs.costScaleLow.label),
+    tooltipText: _lang(advancedControlsText.inputs.costScaleLow.tooltip),
+  });
+  const _costHighLabel = makeTooltipLabel({
+    labelText: _lang(advancedControlsText.inputs.costScaleHigh.label),
+    tooltipText: _lang(advancedControlsText.inputs.costScaleHigh.tooltip),
+  });
+
   const formBenefitScale = Inputs.form(
     {
       low: Inputs.range([0.5, 1], {
         step: 0.01,
-        label: "Benefit Scale Low",
+        label: _benefitLowLabel,
         value: 0.85,
       }),
       high: Inputs.range([1, 1.6], {
         step: 0.01,
-        label: "Benefit Scale High",
+        label: _benefitHighLabel,
         value: 1.15,
       }),
     },
@@ -318,12 +330,12 @@ options_econPerfWalkthrough = {
     {
       low: Inputs.range([0.5, 1], {
         step: 0.01,
-        label: "Cost Scale Low",
+        label: _costLowLabel,
         value: 0.9,
       }),
       high: Inputs.range([1, 1.8], {
         step: 0.01,
-        label: "Cost Scale High",
+        label: _costHighLabel,
         value: 1.2,
       }),
     },
@@ -333,31 +345,42 @@ options_econPerfWalkthrough = {
   );
 
   const _discountLabel = makeTooltipLabel({
-    labelText: "Discount Rate",
-    tooltipText: "The Discount rate is...",
+    labelText: _lang(advancedControlsText.inputs.discountRate.label),
+    tooltipText: _lang(advancedControlsText.inputs.discountRate.tooltip),
   })
 
   const _roiLabel = makeTooltipLabel({
-    labelText: "ROI",
-    tooltipText: "The ROI is...",
+    labelText: _lang(advancedControlsText.inputs.roi.label),
+    tooltipText: _lang(advancedControlsText.inputs.roi.tooltip),
   })
 
+  const formFinancialControls = Inputs.form(
+    {
+      discountRate: Inputs.bind(
+        Inputs.range(
+          [0, 1],
+          {step: 0.01, format: x => (x * 100), label : _discountLabel, value: 0.12} 
+        ),
+        viewof discountRate
+      ),
+      bcr: Inputs.bind(
+        Inputs.range(
+          [0.5, 2],
+          {step: 0.01, label: _roiLabel, value: 1.62} 
+        ),
+        viewof bcr
+      )
+    },
+    {
+      template: inputTemplate({ gap: "3em" }),
+    }
+  );
+
   return dropdown_section(
-    "Advanced Controls",
+    _lang(general_translations.advancedControls),
     false,
-    Inputs.bind(
-      Inputs.range(
-        [0, 1],
-        {step: 0.01, format: x => (x * 100), label : _discountLabel, value: 0.12} 
-      ), viewof discountRate
-    ),
-    Inputs.bind(
-      Inputs.range(
-        [0.5, 2],
-        {step: 0.01, label: _roiLabel, value: 1.62} 
-      ), viewof bcr
-    ),
-    `<b>Model Uncertainty</b>`,
+    formFinancialControls,
+    `<b>${_lang(advancedControlsText.modelUncertainty)}</b>`,
     Inputs.bind(formBenefitScale, viewof uncertaintyBenefitScale),
     Inputs.bind(formCostScale, viewof uncertaintyCostScale)
   )
@@ -789,8 +812,9 @@ render_econPerfWalkthrough = () => {
 ### Advanced Control Variables
 
 ```{ojs}
-viewof discountRate = Inputs.range([0, 1],{step: 0.01, format: x => (x * 100), label : "Discount Rate", value: 0.12} ) // 0-1 as a pct
+viewof discountRate = Inputs.range([0, 1],{step: 0.01, format: x => (x * 100), value: 0.12, label: "Discount Rate"} ) // 0-1 as a pct
 viewof bcr = Inputs.range([0.5, 2], {step: 0.01, label: "BCR", value: 1.62} )
+
 
 viewof uncertaintyBenefitScale = Inputs.form(
     {
@@ -1229,17 +1253,19 @@ resultTable = () => {
     (d) => d.year <= selectedYear,
   );
 
+  const tableHeaders =
+    nbText.investmentReturns.blocks.exploreIndicators.tableHeaders;
   const headerNames = [
-    "Year",
-    "Benefit",
-    "Cost",
-    "Cashflow",
-    "Discounted Benefit (cum)",
-    "Discounted Cost (cum)",
-    "Discounted NPV (cum)",
-    "Discounted BCR",
-    "IRR",
-    "MIRR",
+    _lang(tableHeaders.year),
+    _lang(tableHeaders.benefit),
+    _lang(tableHeaders.cost),
+    _lang(tableHeaders.cashflow),
+    _lang(tableHeaders.discountedBenefitCum),
+    _lang(tableHeaders.discountedCostCum),
+    _lang(tableHeaders.discountedNpvCum),
+    _lang(tableHeaders.discountedBcr),
+    _lang(tableHeaders.irr),
+    _lang(tableHeaders.mirr),
   ];
 
   return html`
