chore: Cleaning up to prep for merge into dev branch
fix: typo

--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Adaptation Atlas Notebooks"
 ---
 
-This page will likely note be public facing in production. We have the
+This page will likely not be public facing in production. We have the
 [landing page](https://adaptationatlas.cgiar.org) for that. However, this index
 page is useful in development to bounce between the examples, different
 notebooks being worked on, etc.
