--- a/notebooks/roi/notebook.qmd
+++ b/notebooks/roi/notebook.qmd
@@ -11,7 +11,6 @@ execute:
 
 ```{ojs}
 import {
-  atlasHero,
   dropdown_section,
   downloadButton,
   makeTooltipLabel,
@@ -20,6 +19,8 @@ import {
 import { atlasTOC } from "/helpers/toc.ojs";
 import { formatUSD, inputTemplate } from "/helpers/std.ojs";
 
+import { heroImage as atlasHero } from "/helpers/hero.js";
+
 import {
   filterableDataTable as atlasTable,
   sparkbar,
@@ -27,7 +28,7 @@ import {
 ```
 
 ```{ojs}
-atlasHero(nbTitle, "./../../images/default_crop.webp");
+html`${atlasHero(nbTitle, "./../../images/notebooks/roi.webp")}`;
 
 atlasTOC({
   skip: ["notebook-title", "appendix", "source-code"], // These should be the section headings in the {# headings}
