--- a/index.qmd
+++ b/index.qmd
@@ -14,41 +14,36 @@ pagetitle: "Notebooks - Adaptation Atlas"
 
 ```{=html}
 <style>
-/* Notebook index tiles */
+/* Notebook index grid */
   .notebook-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-    gap: 1.25rem;
-    margin: 1.5rem 0 2.5rem;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 1rem;
+    margin: 1.5rem 0 2rem;
   }
 
-  .notebook-grid__empty {
-    padding: 1rem 1.25rem;
-    border: 1px dashed var(--atlasLightGray);
-    border-radius: 12px;
-    color: var(--atlasDarkGray);
-    background: #f8f8f8;
+  @media (max-width: 1100px) {
+    .notebook-grid {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
+
+  @media (max-width: 820px) {
+    .notebook-grid {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+
+  @media (max-width: 540px) {
+    .notebook-grid {
+      grid-template-columns: 1fr;
+    }
   }
 
   main a.notebook-card {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    background: #fff;
-    border: 1px solid var(--atlasLightGray);
-    border-radius: 16px;
-    overflow: hidden;
+    display: block;
     color: #0f1912;
     text-decoration: none;
-    box-shadow: 0 14px 40px rgba(0, 0, 0, 0.08);
-    transition: transform 180ms ease, box-shadow 180ms ease, border-color 180ms ease;
-  }
-
-  .notebook-card:focus-visible,
-  .notebook-card:hover {
-    transform: translateY(-6px);
-    border-color: var(--atlasGreen);
-    box-shadow: 0 16px 45px rgba(46, 118, 54, 0.22);
   }
 
   main a.notebook-card,
@@ -58,72 +53,34 @@ pagetitle: "Notebooks - Adaptation Atlas"
     text-decoration: none !important;
   }
 
+  .notebook-card__image-wrap {
+    overflow: hidden;
+  }
+
   .notebook-card__image {
-    position: relative;
-    padding-top: 58%;
-    background-size: cover;
-    background-position: center;
+    display: block;
+    width: 100%;
+    aspect-ratio: 16 / 9;
+    object-fit: cover;
+    transition: opacity 160ms ease;
   }
 
-  .notebook-card__body {
-    display: flex;
-    flex-direction: column;
-    gap: 0.35rem;
-    padding: 1rem 1.25rem 1.25rem;
-  }
-
-  .notebook-card__badge {
-    align-self: flex-start;
-    padding: 0.25rem 0.6rem;
-    border-radius: 999px;
-    background: rgba(46, 118, 54, 0.12);
-    color: var(--atlasGreen);
-    font-size: 0.8rem;
-    letter-spacing: 0.08em;
-    text-transform: uppercase;
-    font-weight: 700;
+  .notebook-card:hover .notebook-card__image,
+  .notebook-card:focus-visible .notebook-card__image {
+    opacity: 0.85;
   }
 
   .notebook-card__title {
-    margin: 0;
-    font-size: 1.15rem;
-    color: #0f1912;
-  }
-
-  .notebook-card__subtitle {
-    margin: 0;
-    color: #3b4a3f;
+    margin: 0.5rem 0 0;
     font-size: 1rem;
-  }
-
-  .notebook-card__summary {
-    margin: 0.25rem 0 0;
-    color: #313d34;
-    font-size: 0.98rem;
-    line-height: 1.5;
-  }
-
-  .notebook-card__cta {
-    display: inline-flex;
-    align-items: center;
-    gap: 0.35rem;
-    margin-top: 0.6rem;
-    color: var(--atlasGreen);
-    font-weight: 700;
-    font-size: 0.95rem;
-    text-decoration: none;
-  }
-
-  .notebook-card__cta::after {
-    content: ">";
-    font-size: 0.9rem;
+    line-height: 1.35;
+    color: #111;
   }
 </style>
 
 <script>
   (async () => {
     const grid = document.getElementById("notebook-grid");
-    const empty = document.getElementById("notebook-grid-empty");
 
     try {
       const response = await fetch("notebooks.json");
@@ -139,7 +96,7 @@ pagetitle: "Notebooks - Adaptation Atlas"
       ).filter((nb) => !nb.hide);
 
       if (!notebooks.length) {
-        empty.hidden = false;
+        grid.innerHTML = "<p>No notebooks found.</p>";
         return;
       }
 
@@ -147,7 +104,6 @@ pagetitle: "Notebooks - Adaptation Atlas"
         .map((nb) => {
           const image = nb.image || "images/default_crop.webp";
           const titleEn = (nb.title && nb.title.en) || nb.id || "Notebook";
-          const summary = nb.summary && nb.summary.en;
           const href =
             typeof nb.path === "string"
               ? nb.path.replace(".qmd", ".html")
@@ -155,17 +111,10 @@ pagetitle: "Notebooks - Adaptation Atlas"
 
           return `
             <a class="notebook-card" href="${href}">
-              <div class="notebook-card__image" style="background-image:
-                linear-gradient(180deg, rgba(8, 20, 14, 0) 25%, rgba(8, 20, 14, 0.6) 100%),
-                url('${image}')"></div>
-              <div class="notebook-card__body">
-                <h3 class="notebook-card__title">${titleEn}</h3>
-                ${
-                  summary
-                    ? `<p class="notebook-card__summary">${summary}</p>`
-                    : ""
-                }
+              <div class="notebook-card__image-wrap">
+                <img class="notebook-card__image" src="${image}" alt="${titleEn}">
               </div>
+              <h3 class="notebook-card__title">${titleEn}</h3>
             </a>
           `;
         })
@@ -173,8 +122,7 @@ pagetitle: "Notebooks - Adaptation Atlas"
 
       grid.innerHTML = cards;
     } catch (err) {
-      empty.textContent = "Error loading notebooks. Please try again later.";
-      empty.hidden = false;
+      grid.innerHTML = "<p>Error loading notebooks. Please try again later.</p>";
       console.error(err);
     }
   })();
