fix(ROI Nb): Format USD values in the production table

--- a/notebooks/roi/notebook.qmd
+++ b/notebooks/roi/notebook.qmd
@@ -101,7 +101,8 @@ viewof productionView = Inputs.radio(["plot", "table"], {
           max: maxVal,
           align: "right",
           background: "#D9ECD9",
-          color: "black"
+          color: "black",
+          formatter: (d) => formatUSD()(d),
         })
       }
     });
