feat: Add in final lua script to convert csv -> json. It links to the metadata so any files needed converted should be defined in notebook yaml.
Lua was chosen partly for speed, but also it integrates best with quarto
pipeline. We can easily access the quarto yaml metadata from the lua
script which allows the conversions to be defined in the notebook.
Otherwise the conversions would need to be defined elsewhere, as I do
not think pre-render scripts (py, R, ts) can access yaml vars

--- a/docs/glossary.qmd
+++ b/docs/glossary.qmd
@@ -8,13 +8,15 @@ nb-authors:
 date-created: "2025-11-10"
 date-edited: today
 
+csv2json:
+  - input: /data/docs/glossary.csv
+    output: /data/docs/glossary.json
+
 format:
   html:
     include-in-header:
       - text: |
           <script src="./../components/backToTop.js"></script>
-filters:
-  - ./../helpers/glossaryToJSON.lua
 ---
 
 {{< include "/components/_toc.qmd" >}}
